Fix dark mode links

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -13,6 +13,9 @@ body {
     &.dark {
         background: #000; 
         color: #fff; 
+        a {
+            color: #fff; 
+        }
     }
     main {
         display: flex; 
